// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NicknameChip > matches snapshot (accent + entrance + delete + staggerDelay) 1`] = `
<div
  class="main entrance accent"
  style="animation-delay: 250ms;"
>
  Snapshot complex
  <button
    class="delete"
  >
    <span
      data-icon="faXmark"
      data-testid="fa-icon"
    />
  </button>
</div>
`;

exports[`NicknameChip > matches snapshot (default subtle, no delete, no animation, no delay) 1`] = `
<div
  class="main subtle"
>
  Snapshot default
</div>
`;

exports[`NicknameChip > matches snapshot (exit without delete) 1`] = `
<div
  class="main exit subtle"
>
  Snapshot exit
</div>
`;
